--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Моё описание</title>
+    <link rel="stylesheet" href="Untitled-1.css">
   </head>
   <body>
     <main>
